// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkIcon should apply user props 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "rgb(68, 69, 96)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
      Object {
        "color": "rgb(7, 112, 227)",
      },
    ]
  }
>
  
</Text>
`;

exports[`iOS BpkIcon should render correctly 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "rgb(68, 69, 96)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
    ]
  }
>
  
</Text>
`;

exports[`iOS BpkIcon should render small icon correctly 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "rgb(68, 69, 96)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "includeFontPadding": false,
      },
      Object {
        "fontSize": 16,
      },
    ]
  }
>
  
</Text>
`;
